--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -1,3 +1,5 @@
+// @use "./transition.scss" as *;
+
 html {
   background: #fff;
   -ms-text-size-adjust: 100%;
@@ -191,12 +193,4 @@ blockquote {
   font-size: 100%;
   font-weight: 500;
   line-height: 2;
-}
-
-#app{
-  background: var(--el-bg-color-page)
-}
-
-.cursor-pointer{
-  cursor: pointer;
 }
