fix: auto upload & route animate

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -37,6 +37,10 @@ body {
   color: var(--el-text-color-primary);
 }
 
+.el-main {
+  position: relative;
+  overflow: hidden !important;
+}
 
 .cursor-pointer {
   cursor: pointer;
