--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -15,24 +15,19 @@ $--login-animation-duration: .45s;
   opacity: 0;
 }
 
-.sub-enter-active {
-  transition: all $page-transition-duration ease-out;
-  width: 100%;
-  position: absolute;
-}
 
+.sub-enter-active,
 .sub-leave-active {
-  width: 100%;
+  height: calc(100% - 2*var(--el-main-padding)) !important;
+  width: calc(100% - 2*var(--el-main-padding)) !important;
+  will-change: transform;
+  backface-visibility: hidden;
+  position: absolute;
   transition: all $page-transition-duration var(--el-transition-function-ease-in-out-bezier);
-}
-
-.sub-leave-from {
-  width: 100%;
 }
 
 .sub-enter-from,
 .sub-leave-to {
-  width: 100%;
-  transform: translateX(40px);
   opacity: 0;
+  transform: translate3d(-10%, -10%, 0);
 }
