feat: keepalive & fixbugs

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -40,6 +40,7 @@ body {
 .el-main {
   position: relative;
   overflow: hidden !important;
+  --el-main-padding: 15px !important;
 }
 
 .cursor-pointer {
